1917 [FFMSIndexer] audio avs files will only be created if the indexing was successfull
1916 [FileIndexer] added demux option to the audio tracks when using FFMSIndex
                   these audio tracks will be added to the main input tab if "on completion load files" is selected. Feature request #3158957
1915 [VideoPlayer] changed zoom and size behavior
                   fixed starting preview size so that it will always match the screen resolution. Bug #3159086
                   changed seek bar and buttons behavior. Feature request #3003726
                   try to ensure playback speed during playback
1914 [One-Click] fixed handling of video input files with short file names (less than 6 characters including extension). Bug #3160645
1913 [One-Click] chapters will not be added if output container is AVI
1912 [One-Click] fixed handling of video input files without audio track. Bug #3159523

Changelog 0.3.5.0 --> 1911

Main changes:
[Update] enhanced update detection. As a result all downloads need to be reapplied once!
[Update] added a warning about patents and binary files when megui finds updates
[x264] updated settings to reflect the recent x264 build
[DGIndexNV] added support for the recent build and removing therefore the CUVIDServer handling (requires at least DGIndexNV 2021)
[Update] added vobsub.dll and besplit
[One-Click] added support for DGIndexNV and DGAVCIndex
[VideoPlayer] added new control to speed up video navigation. Patch by aKzenT (#1902576)
[Flac] added flac encoding. Feature request #2930601
[Update] removed mencoder because pre-rendering job and snow are using now ffmpeg
improved M2TS bitrate calculation. Patch by Selur
[Audio Downmix] enhanced avisynth script in order to cover more input channel configurations. Patch by tebasuna51
changed version numbers to reflect the svn build numbers

Other changes:
[Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155